--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="assets/favicon-32x32-inactive.png" sizes="32x32">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lobster+Two" rel="stylesheet">
 </head>
 <body>
   <pp-root></pp-root>
